--- a/translations/game+intl-icu.es.xlf
+++ b/translations/game+intl-icu.es.xlf
@@ -20358,7 +20358,7 @@
     <unit id="aZTP5kd" name="Behausung:">
       <notes>
         <note category="german">Behausung:</note>
-        <note category="from">twig:///templates/ajax/game/town/home.html.twig</note>
+        <note category="from">[unused]</note>
       </notes>
       <segment>
         <source>Behausung:</source>
@@ -20368,7 +20368,7 @@
     <unit id="DPEWu9n" name="Bauarbeiten:">
       <notes>
         <note category="german">Bauarbeiten:</note>
-        <note category="from">twig:///templates/ajax/game/town/home.html.twig</note>
+        <note category="from">[unused]</note>
       </notes>
       <segment>
         <source>Bauarbeiten:</source>
@@ -20378,7 +20378,7 @@
     <unit id="da5HmMo" name="Verteidigungsgegenstände:">
       <notes>
         <note category="german">Verteidigungsgegenstände:</note>
-        <note category="from">twig:///templates/ajax/game/town/home.html.twig</note>
+        <note category="from">[unused]</note>
       </notes>
       <segment>
         <source>Verteidigungsgegenstände:</source>
@@ -20388,7 +20388,7 @@
     <unit id="82mfAu." name="Heldenbonus:">
       <notes>
         <note category="german">Heldenbonus:</note>
-        <note category="from">twig:///templates/ajax/game/town/home.html.twig</note>
+        <note category="from">[unused]</note>
       </notes>
       <segment>
         <source>Heldenbonus:</source>
@@ -20399,7 +20399,7 @@
       <notes>
         <note category="german">Total:</note>
         <note category="state">new</note>
-        <note category="from">twig:///templates/ajax/game/town/home.html.twig</note>
+        <note category="from">[unused]</note>
       </notes>
       <segment>
         <source>Total:</source>
@@ -20409,7 +20409,7 @@
     <unit id="wyKmZM_">
       <notes>
         <note category="german">Verteidigungsgegenstände (Blechplatten usw...) müssen in der Truhe abgelegt werden.</note>
-        <note category="from">twig:///templates/ajax/game/town/home.html.twig</note>
+        <note category="from">[unused]</note>
       </notes>
       <segment>
         <source>Verteidigungsgegenstände (Blechplatten usw...) müssen in der Truhe abgelegt werden.</source>
