--- a/translations/ghost+intl-icu.de.xlf
+++ b/translations/ghost+intl-icu.de.xlf
@@ -48,7 +48,7 @@
     </unit>
     <unit id="Vlb5Lbe" name="Aktionen">
       <notes>
-        <note category="from">twig:///templates/ajax/game/town/citizen_vote.html.twig;twig:///templates/ajax/ghost/intro.html.twig</note>
+        <note category="from">twig:///templates/ajax/game/town/citizen_vote.html.twig</note>
       </notes>
       <segment>
         <source>Aktionen</source>
@@ -93,7 +93,7 @@
     </unit>
     <unit id="gqk_gdE" name="Beitreten">
       <notes>
-        <note category="from">twig:///templates/ajax/ghost/intro.html.twig</note>
+        <note category="from">[unused]</note>
       </notes>
       <segment>
         <source>Beitreten</source>
