--- a/translations/soul+intl-icu.de.xlf
+++ b/translations/soul+intl-icu.de.xlf
@@ -2462,7 +2462,7 @@
     </unit>
     <unit id="IHRCYe1" name="In Foren posten">
       <notes>
-        <note category="from">twig:///templates/ajax/soul/me.html.twig</note>
+        <note category="from">php:///src/Service/LogTemplateHandler.php;twig:///templates/ajax/soul/me.html.twig</note>
       </notes>
       <segment>
         <source>In Foren posten</source>
@@ -2480,7 +2480,7 @@
     </unit>
     <unit id="AHcu..1" name="Kommunikation in der Stadt">
       <notes>
-        <note category="from">twig:///templates/ajax/soul/me.html.twig</note>
+        <note category="from">php:///src/Service/LogTemplateHandler.php;twig:///templates/ajax/soul/me.html.twig</note>
       </notes>
       <segment>
         <source>Kommunikation in der Stadt</source>
@@ -2498,7 +2498,7 @@
     </unit>
     <unit id="74vPalP" name="Stadtübergreifende Kommunikation">
       <notes>
-        <note category="from">twig:///templates/ajax/soul/me.html.twig</note>
+        <note category="from">php:///src/Service/LogTemplateHandler.php;twig:///templates/ajax/soul/me.html.twig</note>
       </notes>
       <segment>
         <source>Stadtübergreifende Kommunikation</source>
@@ -2516,7 +2516,7 @@
     </unit>
     <unit id="4L8kPem" name="Kommentare">
       <notes>
-        <note category="from">twig:///templates/ajax/soul/me.html.twig</note>
+        <note category="from">php:///src/Service/LogTemplateHandler.php;twig:///templates/ajax/soul/me.html.twig</note>
       </notes>
       <segment>
         <source>Kommentare</source>
@@ -2534,7 +2534,7 @@
     </unit>
     <unit id="cnYKFrt" name="Gruppenorganisation">
       <notes>
-        <note category="from">twig:///templates/ajax/soul/me.html.twig</note>
+        <note category="from">php:///src/Service/LogTemplateHandler.php;twig:///templates/ajax/soul/me.html.twig</note>
       </notes>
       <segment>
         <source>Gruppenorganisation</source>
@@ -2552,7 +2552,7 @@
     </unit>
     <unit id="WPixbld" name="Spielen">
       <notes>
-        <note category="from">twig:///templates/ajax/soul/me.html.twig</note>
+        <note category="from">php:///src/Service/LogTemplateHandler.php;twig:///templates/ajax/soul/me.html.twig</note>
       </notes>
       <segment>
         <source>Spielen</source>
@@ -2624,7 +2624,7 @@
     </unit>
     <unit id="e5CjO7g" name="Ändern des Avatars">
       <notes>
-        <note category="from">twig:///templates/ajax/soul/me.html.twig</note>
+        <note category="from">php:///src/Service/LogTemplateHandler.php;twig:///templates/ajax/soul/me.html.twig</note>
       </notes>
       <segment>
         <source>Ändern des Avatars</source>
@@ -2642,7 +2642,7 @@
     </unit>
     <unit id="sXIofxl" name="Ändern des Profiltitels">
       <notes>
-        <note category="from">twig:///templates/ajax/soul/me.html.twig</note>
+        <note category="from">php:///src/Service/LogTemplateHandler.php;twig:///templates/ajax/soul/me.html.twig</note>
       </notes>
       <segment>
         <source>Ändern des Profiltitels</source>
@@ -2660,7 +2660,7 @@
     </unit>
     <unit id="U8rWfCJ" name="Ändern der Profilbeschreibung">
       <notes>
-        <note category="from">twig:///templates/ajax/soul/me.html.twig</note>
+        <note category="from">php:///src/Service/LogTemplateHandler.php;twig:///templates/ajax/soul/me.html.twig</note>
       </notes>
       <segment>
         <source>Ändern der Profilbeschreibung</source>
@@ -3184,7 +3184,7 @@
     </unit>
     <unit id="vsOyofZ" name="Schwarzes Brett">
       <notes>
-        <note category="from">twig:///templates/ajax/soul/me.html.twig</note>
+        <note category="from">php:///src/Service/LogTemplateHandler.php;twig:///templates/ajax/soul/me.html.twig</note>
       </notes>
       <segment>
         <source>Schwarzes Brett</source>
@@ -3247,7 +3247,7 @@
     </unit>
     <unit id="6d9Ha3Q" name="Ändern des Spielernamens">
       <notes>
-        <note category="from">twig:///templates/ajax/soul/me.html.twig</note>
+        <note category="from">php:///src/Service/LogTemplateHandler.php;twig:///templates/ajax/soul/me.html.twig</note>
       </notes>
       <segment>
         <source>Ändern des Spielernamens</source>
@@ -4334,6 +4334,24 @@
       <segment>
         <source>Bitte bestätige, dass du deine Seele zurücksetzen möchtest. Du kannst diese Aktion NUR EIN MAL ausführen. Diese Aktion KANN NICHT RÜCKGÄNGIG GEMACHT WERDEN!</source>
         <target>Bitte bestätige, dass du deine Seele zurücksetzen möchtest. Du kannst diese Aktion NUR EIN MAL ausführen. Diese Aktion KANN NICHT RÜCKGÄNGIG GEMACHT WERDEN!</target>
+      </segment>
+    </unit>
+    <unit id="fh5UH56" name="Specify using player search">
+      <notes>
+        <note category="from">php:///src/Controller/Soul/SoulController.php</note>
+      </notes>
+      <segment>
+        <source>Specify using player search</source>
+        <target>Specify using player search</target>
+      </segment>
+    </unit>
+    <unit id="96qFRFR" name="Ändern des Profils">
+      <notes>
+        <note category="from">php:///src/Service/LogTemplateHandler.php</note>
+      </notes>
+      <segment>
+        <source>Ändern des Profils</source>
+        <target>Ändern des Profils</target>
       </segment>
     </unit>
   </file>
