--- a/translations/soul+intl-icu.es.xlf
+++ b/translations/soul+intl-icu.es.xlf
@@ -2636,7 +2636,7 @@
     <unit id="IHRCYe1" name="In Foren posten">
       <notes>
         <note category="german">In Foren posten</note>
-        <note category="from">twig:///templates/ajax/soul/me.html.twig</note>
+        <note category="from">php:///src/Service/LogTemplateHandler.php;twig:///templates/ajax/soul/me.html.twig</note>
       </notes>
       <segment>
         <source>In Foren posten</source>
@@ -2656,7 +2656,7 @@
     <unit id="AHcu..1" name="Kommunikation in der Stadt">
       <notes>
         <note category="german">Kommunikation in der Stadt</note>
-        <note category="from">twig:///templates/ajax/soul/me.html.twig</note>
+        <note category="from">php:///src/Service/LogTemplateHandler.php;twig:///templates/ajax/soul/me.html.twig</note>
       </notes>
       <segment>
         <source>Kommunikation in der Stadt</source>
@@ -2676,7 +2676,7 @@
     <unit id="74vPalP" name="Stadtübergreifende Kommunikation">
       <notes>
         <note category="german">Stadtübergreifende Kommunikation</note>
-        <note category="from">twig:///templates/ajax/soul/me.html.twig</note>
+        <note category="from">php:///src/Service/LogTemplateHandler.php;twig:///templates/ajax/soul/me.html.twig</note>
       </notes>
       <segment>
         <source>Stadtübergreifende Kommunikation</source>
@@ -2696,7 +2696,7 @@
     <unit id="4L8kPem" name="Kommentare">
       <notes>
         <note category="german">Kommentare</note>
-        <note category="from">twig:///templates/ajax/soul/me.html.twig</note>
+        <note category="from">php:///src/Service/LogTemplateHandler.php;twig:///templates/ajax/soul/me.html.twig</note>
       </notes>
       <segment>
         <source>Kommentare</source>
@@ -2716,7 +2716,7 @@
     <unit id="cnYKFrt" name="Gruppenorganisation">
       <notes>
         <note category="german">Gruppenorganisation</note>
-        <note category="from">twig:///templates/ajax/soul/me.html.twig</note>
+        <note category="from">php:///src/Service/LogTemplateHandler.php;twig:///templates/ajax/soul/me.html.twig</note>
       </notes>
       <segment>
         <source>Gruppenorganisation</source>
@@ -2736,7 +2736,7 @@
     <unit id="WPixbld" name="Spielen">
       <notes>
         <note category="german">Spielen</note>
-        <note category="from">twig:///templates/ajax/soul/me.html.twig</note>
+        <note category="from">php:///src/Service/LogTemplateHandler.php;twig:///templates/ajax/soul/me.html.twig</note>
       </notes>
       <segment>
         <source>Spielen</source>
@@ -2816,7 +2816,7 @@
     <unit id="e5CjO7g" name="Ändern des Avatars">
       <notes>
         <note category="german">Ändern des Avatars</note>
-        <note category="from">twig:///templates/ajax/soul/me.html.twig</note>
+        <note category="from">php:///src/Service/LogTemplateHandler.php;twig:///templates/ajax/soul/me.html.twig</note>
       </notes>
       <segment>
         <source>Ändern des Avatars</source>
@@ -2836,7 +2836,7 @@
     <unit id="sXIofxl" name="Ändern des Profiltitels">
       <notes>
         <note category="german">Ändern des Profiltitels</note>
-        <note category="from">twig:///templates/ajax/soul/me.html.twig</note>
+        <note category="from">php:///src/Service/LogTemplateHandler.php;twig:///templates/ajax/soul/me.html.twig</note>
       </notes>
       <segment>
         <source>Ändern des Profiltitels</source>
@@ -2856,7 +2856,7 @@
     <unit id="U8rWfCJ" name="Ändern der Profilbeschreibung">
       <notes>
         <note category="german">Ändern der Profilbeschreibung</note>
-        <note category="from">twig:///templates/ajax/soul/me.html.twig</note>
+        <note category="from">php:///src/Service/LogTemplateHandler.php;twig:///templates/ajax/soul/me.html.twig</note>
       </notes>
       <segment>
         <source>Ändern der Profilbeschreibung</source>
@@ -3417,7 +3417,7 @@
     <unit id="vsOyofZ" name="Schwarzes Brett">
       <notes>
         <note category="german">Schwarzes Brett</note>
-        <note category="from">twig:///templates/ajax/soul/me.html.twig</note>
+        <note category="from">php:///src/Service/LogTemplateHandler.php;twig:///templates/ajax/soul/me.html.twig</note>
       </notes>
       <segment>
         <source>Schwarzes Brett</source>
@@ -3487,7 +3487,7 @@
     <unit id="6d9Ha3Q" name="Ändern des Spielernamens">
       <notes>
         <note category="german">Ändern des Spielernamens</note>
-        <note category="from">twig:///templates/ajax/soul/me.html.twig</note>
+        <note category="from">php:///src/Service/LogTemplateHandler.php;twig:///templates/ajax/soul/me.html.twig</note>
       </notes>
       <segment>
         <source>Ändern des Spielernamens</source>
@@ -4695,6 +4695,28 @@
       <segment>
         <source>Bitte bestätige, dass du deine Seele zurücksetzen möchtest. Du kannst diese Aktion NUR EIN MAL ausführen. Diese Aktion KANN NICHT RÜCKGÄNGIG GEMACHT WERDEN!</source>
         <target>Por favor confirma que quieres reiniciar tu alma. Solo puedes realizar esta acción UNA VEZ. ¡Esta acción NO PUEDE SER REVERTIDA!</target>
+      </segment>
+    </unit>
+    <unit id="fh5UH56" name="Specify using player search">
+      <notes>
+        <note category="german">Specify using player search</note>
+        <note category="from">php:///src/Controller/Soul/SoulController.php</note>
+        <note category="state">new</note>
+      </notes>
+      <segment>
+        <source>Specify using player search</source>
+        <target>Specify using player search</target>
+      </segment>
+    </unit>
+    <unit id="96qFRFR" name="Ändern des Profils">
+      <notes>
+        <note category="german">Ändern des Profils</note>
+        <note category="from">php:///src/Service/LogTemplateHandler.php</note>
+        <note category="state">new</note>
+      </notes>
+      <segment>
+        <source>Ändern des Profils</source>
+        <target>Ändern des Profils</target>
       </segment>
     </unit>
   </file>
