--- a/translations/admin+intl-icu.es.xlf
+++ b/translations/admin+intl-icu.es.xlf
@@ -4813,7 +4813,7 @@
       </notes>
       <segment>
         <source>Instanzeigenschaften</source>
-        <target>Instanzeigenschaften</target>
+        <target>Propiedades del objeto</target>
       </segment>
     </unit>
     <unit id="t6AH21h" name="Vergiftet">
@@ -4824,7 +4824,7 @@
       </notes>
       <segment>
         <source>Vergiftet</source>
-        <target>Vergiftet</target>
+        <target>Envenenado</target>
       </segment>
     </unit>
     <unit id="T3Ok4_w" name="Infiziert">
@@ -4835,7 +4835,7 @@
       </notes>
       <segment>
         <source>Infiziert</source>
-        <target>Infiziert</target>
+        <target>Infectado</target>
       </segment>
     </unit>
     <unit id=".7_a1a_" name="Noch nicht aufgehoben">
@@ -4846,7 +4846,7 @@
       </notes>
       <segment>
         <source>Noch nicht aufgehoben</source>
-        <target>Noch nicht aufgehoben</target>
+        <target>Sin recoger</target>
       </segment>
     </unit>
     <unit id="P_.E9gw" name="Spielernamen nicht von EternalTwin übernehmen">
