--- a/translations/global+intl-icu.es.xlf
+++ b/translations/global+intl-icu.es.xlf
@@ -4261,5 +4261,15 @@
         <target>Foros</target>
       </segment>
     </unit>
+    <unit id="826K03a" name="Kontaktliste">
+      <notes>
+        <note category="german">Kontaktliste</note>
+        <note category="from">twig:///templates/ajax/forum/editor.html.twig</note>
+      </notes>
+      <segment>
+        <source>Kontaktliste</source>
+        <target>Lista de contactos</target>
+      </segment>
+    </unit>
   </file>
 </xliff>
