--- a/translations/admin+intl-icu.en.xlf
+++ b/translations/admin+intl-icu.en.xlf
@@ -95,7 +95,7 @@
     <unit id="lS.zZKk" name="Das Leben dieses Bürgers sofort beenden?">
       <notes>
         <note category="german">Das Leben dieses Bürgers sofort beenden?</note>
-        <note category="from">twig:///templates/ajax/admin/users/citizen.html.twig</note>
+        <note category="from">twig:///templates/ajax/admin/users/citizen.html.twig;twig:///templates/ajax/soul/visit.html.twig</note>
       </notes>
       <segment>
         <source>Das Leben dieses Bürgers sofort beenden?</source>
@@ -4906,6 +4906,17 @@
       <segment>
         <source>Nicht von ET verwaltet.</source>
         <target>Not managed by ET.</target>
+      </segment>
+    </unit>
+    <unit id="GabFwYl" name="Leber fressen">
+      <notes>
+        <note category="german">Leber fressen</note>
+        <note category="from">twig:///templates/ajax/admin/users/citizen.html.twig;twig:///templates/ajax/soul/visit.html.twig</note>
+        <note category="state">new</note>
+      </notes>
+      <segment>
+        <source>Leber fressen</source>
+        <target>Eat the liver</target>
       </segment>
     </unit>
   </file>
