--- a/translations/game+intl-icu.de.xlf
+++ b/translations/game+intl-icu.de.xlf
@@ -21980,5 +21980,14 @@
         <target>{citizen} wollte das Gebiet säubern, aber ohne Erfolg.</target>
       </segment>
     </unit>
+    <unit id="LbDbpH3" name="Spontanes Leberversagen">
+      <notes>
+        <note category="from">db://CauseOfDeath</note>
+      </notes>
+      <segment>
+        <source>Spontanes Leberversagen</source>
+        <target>Spontanes Leberversagen</target>
+      </segment>
+    </unit>
   </file>
 </xliff>
