--- a/translations/game+intl-icu.en.xlf
+++ b/translations/game+intl-icu.en.xlf
@@ -23244,5 +23244,15 @@
         <target>{citizen} wollte das Gebiet säubern, aber ohne Erfolg.</target>
       </segment>
     </unit>
+    <unit id="LbDbpH3" name="Spontanes Leberversagen">
+      <notes>
+        <note category="german">Spontanes Leberversagen</note>
+        <note category="from">db://CauseOfDeath</note>
+      </notes>
+      <segment>
+        <source>Spontanes Leberversagen</source>
+        <target>Liver failure</target>
+      </segment>
+    </unit>
   </file>
 </xliff>
