--- a/translations/game+intl-icu.es.xlf
+++ b/translations/game+intl-icu.es.xlf
@@ -23161,5 +23161,16 @@
         <target>{citizen} wollte das Gebiet säubern, aber ohne Erfolg.</target>
       </segment>
     </unit>
+    <unit id="LbDbpH3" name="Spontanes Leberversagen">
+      <notes>
+        <note category="german">Liver failure</note>
+        <note category="from">db://CauseOfDeath</note>
+        <note category="state">new</note>
+      </notes>
+      <segment>
+        <source>Spontanes Leberversagen</source>
+        <target>Spontanes Leberversagen</target>
+      </segment>
+    </unit>
   </file>
 </xliff>
